--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catonmars",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "cat.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.6.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0"
   },
   "devDependencies": {
